[gd_scene load_steps=30 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://platform_metroidvania asset pack v1.01/tiles and background_foreground (new)/tileset_32x32(new).png" type="Texture" id=2]
[ext_resource path="res://platform_metroidvania asset pack v1.01/tiles and background_foreground (new)/bg_2.png" type="Texture" id=3]
[ext_resource path="res://UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Spikes.tscn" type="PackedScene" id=5]
[ext_resource path="res://Dice.tscn" type="PackedScene" id=6]
[ext_resource path="res://Level.gd" type="Script" id=7]
[ext_resource path="res://Health Orbs.tscn" type="PackedScene" id=8]
[ext_resource path="res://InstaKill.tscn" type="PackedScene" id=9]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 88, 192 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=1]
0/name = "tileset_32x32(new).png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 192, 96 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 3, 0 ), 255, Vector2( 3, 1 ), 219, Vector2( 3, 2 ), 507, Vector2( 4, 0 ), 63, Vector2( 4, 2 ), 504, Vector2( 5, 0 ), 447, Vector2( 5, 1 ), 438, Vector2( 5, 2 ), 510 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Level" type="Node2D"]
script = ExtResource( 7 )

[node name="Dice_Coliiders" type="Node2D" parent="."]

[node name="Dice" parent="Dice_Coliiders" instance=ExtResource( 6 )]
position = Vector2( 1000, 192 )

[node name="Collider 1" type="Area2D" parent="Dice_Coliiders"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dice_Coliiders/Collider 1"]
position = Vector2( 1000, 192 )
shape = SubResource( 19 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 128, 296 )
MOVE_SPEED = 500.0
JUMP_TIME_TO_PEAK = 0.5
JUMP_TIME_TO_DESCENT = 0.4

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 0, 1 )
current = true
smoothing_enabled = true

[node name="Visuals" type="Node" parent="."]

[node name="-3" type="CanvasLayer" parent="Visuals"]

[node name="-2" type="CanvasLayer" parent="Visuals"]

[node name="-1" type="ParallaxBackground" parent="Visuals"]
follow_viewport_enable = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="Visuals/-1"]
visible = false
motion_scale = Vector2( 0.1, 0.1 )

[node name="Sprite" type="Sprite" parent="Visuals/-1/ParallaxLayer"]
position = Vector2( 776, 408 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 960, 200 )

[node name="0" type="CanvasLayer" parent="Visuals"]
layer = -50
follow_viewport_enable = true

[node name="Spikes" parent="Visuals/0" instance=ExtResource( 5 )]
position = Vector2( 368, 392 )
rotation = -3.14159

[node name="TileMap" type="TileMap" parent="Visuals/0"]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -131080, 0, 0, -131079, 0, 131076, -131078, 0, 1, -131077, 0, 1, -131076, 0, 131076, -131075, 0, 131076, -131074, 0, 1, -131073, 0, 1, -196608, 0, 2, -65544, 0, 65536, -65543, 0, 65537, -65542, 0, 65537, -65541, 0, 65537, -65540, 0, 65537, -65539, 0, 65537, -65538, 0, 65537, -65537, 0, 65537, -131072, 0, 65539, -8, 0, 65541, -7, 0, 65537, -6, 0, 65537, -5, 0, 65537, -4, 0, 65537, -3, 0, 65537, -2, 0, 65537, -1, 0, 65537, -65536, 0, 65539, 65528, 0, 65536, 65529, 0, 65537, 65530, 0, 65537, 65531, 0, 65537, 65532, 0, 65537, 65533, 0, 65537, 65534, 0, 65537, 65535, 0, 65537, 0, 0, 65539, 131064, 0, 65541, 131065, 0, 65537, 131066, 0, 65537, 131067, 0, 65537, 131068, 0, 65537, 131069, 0, 65537, 131070, 0, 65537, 131071, 0, 65537, 65536, 0, 65538, 196600, 0, 65536, 196601, 0, 65537, 196602, 0, 65537, 196603, 0, 65537, 196604, 0, 65537, 196605, 0, 65537, 196606, 0, 65537, 196607, 0, 65537, 131072, 0, 65539, 262136, 0, 65536, 262137, 0, 65537, 262138, 0, 3, 262139, 0, 131073, 262140, 0, 5, 262141, 0, 65537, 262142, 0, 65537, 262143, 0, 65537, 196608, 0, 65538, 327672, 0, 65536, 327673, 0, 65537, 327674, 0, 65539, 327676, 0, 65541, 327677, 0, 65537, 327678, 0, 65537, 327679, 0, 65537, 262144, 0, 65538, 262157, 0, 0, 262158, 0, 1, 262159, 0, 1, 262160, 0, 1, 262161, 0, 131076, 262162, 0, 2, 393208, 0, 65536, 393209, 0, 65537, 393210, 0, 131075, 393211, 0, 131076, 393212, 0, 131077, 393213, 0, 65537, 393214, 0, 65537, 393215, 0, 65537, 327680, 0, 65538, 327693, 0, 65536, 327694, 0, 65537, 327695, 0, 65537, 327696, 0, 65537, 327697, 0, 65537, 327698, 0, 65539, 458744, 0, 65541, 458745, 0, 65537, 458746, 0, 65537, 458747, 0, 65537, 458748, 0, 65537, 458749, 0, 65537, 458750, 0, 65537, 458751, 0, 65537, 393216, 0, 65538, 393229, 0, 65536, 393230, 0, 65537, 393231, 0, 65537, 393232, 0, 65537, 393233, 0, 65537, 393234, 0, 65538, 524280, 0, 65536, 524281, 0, 65537, 524282, 0, 65537, 524283, 0, 65537, 524284, 0, 3, 524285, 0, 4, 524286, 0, 5, 524287, 0, 65537, 458752, 0, 65539, 458765, 0, 65536, 458766, 0, 65537, 458767, 0, 65537, 458768, 0, 65537, 458769, 0, 65537, 458770, 0, 65539, 589816, 0, 65541, 589817, 0, 65537, 589818, 0, 65537, 589819, 0, 65537, 589820, 0, 65538, 589822, 0, 65541, 589823, 0, 65537, 524288, 0, 65539, 524301, 0, 65536, 524302, 0, 3, 524303, 0, 131073, 524304, 0, 5, 524305, 0, 65537, 524306, 0, 65538, 655352, 0, 65541, 655353, 0, 65537, 655354, 0, 65537, 655355, 0, 65537, 655356, 0, 131075, 655357, 0, 131076, 655358, 0, 131077, 655359, 0, 65537, 589824, 0, 65538, 589837, 0, 65541, 589838, 0, 65538, 589840, 0, 65541, 589841, 0, 65537, 589842, 0, 65538, 720888, 0, 65541, 720889, 0, 65537, 720890, 0, 65537, 720891, 0, 65537, 720892, 0, 65537, 720893, 0, 65537, 720894, 0, 65537, 720895, 0, 65537, 655360, 0, 65538, 655373, 0, 65541, 655374, 0, 131075, 655375, 0, 1, 655376, 0, 131077, 655377, 0, 65537, 655378, 0, 65538, 786424, 0, 65541, 786425, 0, 65537, 786426, 0, 3, 786427, 0, 131073, 786428, 0, 5, 786429, 0, 65537, 786430, 0, 65537, 786431, 0, 65537, 720896, 0, 131075, 720897, 0, 131076, 720898, 0, 1, 720899, 0, 1, 720900, 0, 1, 720901, 0, 131076, 720902, 0, 2, 720909, 0, 65536, 720910, 0, 65537, 720911, 0, 65537, 720912, 0, 65537, 720913, 0, 65537, 720914, 0, 65538, 851960, 0, 65536, 851961, 0, 65537, 851962, 0, 65539, 851964, 0, 65541, 851965, 0, 65537, 851966, 0, 65537, 851967, 0, 65537, 786432, 0, 65537, 786433, 0, 3, 786434, 0, 4, 786435, 0, 5, 786436, 0, 65537, 786437, 0, 65537, 786438, 0, 65538, 786445, 0, 65541, 786446, 0, 65537, 786447, 0, 65537, 786448, 0, 65537, 786449, 0, 65537, 786450, 0, 131075, 786451, 0, 131076, 786452, 0, 1, 786453, 0, 1, 786454, 0, 1, 786455, 0, 1, 786456, 0, 1, 786457, 0, 131076, 786458, 0, 1, 786459, 0, 1, 786460, 0, 131076, 786461, 0, 131076, 786462, 0, 1, 786463, 0, 1, 786464, 0, 131076, 786465, 0, 1, 786466, 0, 131076, 786467, 0, 131076, 786468, 0, 1, 786469, 0, 1, 786470, 0, 1, 786471, 0, 1, 786472, 0, 1, 786473, 0, 131076, 786474, 0, 2, 917496, 0, 65541, 917497, 0, 65537, 917498, 0, 131075, 917499, 0, 131076, 917500, 0, 131077, 917501, 0, 65537, 917502, 0, 65537, 917503, 0, 65537, 851968, 0, 65537, 851969, 0, 65539, 851971, 0, 65536, 851972, 0, 65537, 851973, 0, 65537, 851974, 0, 131075, 851975, 0, 1, 851976, 0, 1, 851977, 0, 1, 851978, 0, 131076, 851979, 0, 1, 851980, 0, 131076, 851981, 0, 131077, 851982, 0, 65537, 851983, 0, 65537, 851984, 0, 65537, 851985, 0, 65537, 851986, 0, 3, 851987, 0, 131073, 851988, 0, 5, 851989, 0, 65537, 851990, 0, 65537, 851991, 0, 65537, 851992, 0, 65537, 851993, 0, 65537, 851994, 0, 65537, 851995, 0, 65537, 851996, 0, 65537, 851997, 0, 65537, 851998, 0, 65537, 851999, 0, 65537, 852000, 0, 3, 852001, 0, 4, 852002, 0, 5, 852003, 0, 65537, 852004, 0, 65537, 852005, 0, 65537, 852006, 0, 65537, 852007, 0, 65537, 852008, 0, 65537, 852009, 0, 65537, 852010, 0, 65539, 983032, 0, 65541, 983033, 0, 65537, 983034, 0, 65537, 983035, 0, 65537, 983036, 0, 65537, 983037, 0, 65537, 983038, 0, 65537, 983039, 0, 65537, 917504, 0, 65537, 917505, 0, 131075, 917506, 0, 131076, 917507, 0, 131077, 917508, 0, 65537, 917509, 0, 65537, 917510, 0, 65537, 917511, 0, 65537, 917512, 0, 65537, 917513, 0, 65537, 917514, 0, 65537, 917515, 0, 65537, 917516, 0, 65537, 917517, 0, 65537, 917518, 0, 65537, 917519, 0, 65537, 917520, 0, 65537, 917521, 0, 65537, 917522, 0, 65539, 917524, 0, 65541, 917525, 0, 65537, 917526, 0, 65537, 917527, 0, 65537, 917528, 0, 65537, 917529, 0, 65537, 917530, 0, 65537, 917531, 0, 65537, 917532, 0, 65537, 917533, 0, 65537, 917534, 0, 65537, 917535, 0, 65537, 917536, 0, 65538, 917538, 0, 65536, 917539, 0, 65537, 917540, 0, 65537, 917541, 0, 65537, 917542, 0, 65537, 917543, 0, 65537, 917544, 0, 65537, 917545, 0, 65537, 917546, 0, 65539, 1048568, 0, 65541, 1048569, 0, 65537, 1048570, 0, 65537, 1048571, 0, 65537, 1048572, 0, 65537, 1048573, 0, 65537, 1048574, 0, 65537, 1048575, 0, 65537, 983040, 0, 65537, 983041, 0, 65537, 983042, 0, 65537, 983043, 0, 65537, 983044, 0, 65537, 983045, 0, 65537, 983046, 0, 65537, 983047, 0, 65537, 983048, 0, 65537, 983049, 0, 65537, 983050, 0, 65537, 983051, 0, 65537, 983052, 0, 65537, 983053, 0, 65537, 983054, 0, 65537, 983055, 0, 65537, 983056, 0, 65537, 983057, 0, 65537, 983058, 0, 131075, 983059, 0, 131076, 983060, 0, 131077, 983061, 0, 65537, 983062, 0, 65537, 983063, 0, 65537, 983064, 0, 65537, 983065, 0, 65537, 983066, 0, 65537, 983067, 0, 65537, 983068, 0, 65537, 983069, 0, 65537, 983070, 0, 65537, 983071, 0, 65537, 983072, 0, 131075, 983073, 0, 131076, 983074, 0, 131077, 983075, 0, 65537, 983076, 0, 65537, 983077, 0, 65537, 983078, 0, 65537, 983079, 0, 65537, 983080, 0, 65537, 983081, 0, 65537, 983082, 0, 65539, 1114104, 0, 131072, 1114105, 0, 4, 1114106, 0, 4, 1114107, 0, 4, 1114108, 0, 4, 1114109, 0, 4, 1114110, 0, 4, 1114111, 0, 131073, 1048576, 0, 131073, 1048577, 0, 131073, 1048578, 0, 131073, 1048579, 0, 131073, 1048580, 0, 4, 1048581, 0, 131073, 1048582, 0, 4, 1048583, 0, 131073, 1048584, 0, 131073, 1048585, 0, 131073, 1048586, 0, 4, 1048587, 0, 131073, 1048588, 0, 4, 1048589, 0, 4, 1048590, 0, 131073, 1048591, 0, 131073, 1048592, 0, 131073, 1048593, 0, 131073, 1048594, 0, 4, 1048595, 0, 131073, 1048596, 0, 131073, 1048597, 0, 131073, 1048598, 0, 131073, 1048599, 0, 131073, 1048600, 0, 131073, 1048601, 0, 4, 1048602, 0, 131073, 1048603, 0, 4, 1048604, 0, 131073, 1048605, 0, 131073, 1048606, 0, 4, 1048607, 0, 4, 1048608, 0, 4, 1048609, 0, 4, 1048610, 0, 131073, 1048611, 0, 131073, 1048612, 0, 4, 1048613, 0, 131073, 1048614, 0, 4, 1048615, 0, 4, 1048616, 0, 131073, 1048617, 0, 4, 1048618, 0, 131074 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource( 4 )]
scale = Vector2( 4, 4 )

[node name="Health orbs" type="Node2D" parent="."]

[node name="Health Orbs" parent="Health orbs" instance=ExtResource( 8 )]
position = Vector2( 664, 344 )

[node name="InstaKill" parent="." instance=ExtResource( 9 )]
position = Vector2( -264, 600 )
collision_layer = 0

[node name="CollisionShape" parent="InstaKill" index="0"]
position = Vector2( 724, 91 )

[node name="Enemy" parent="." instance=ExtResource( 10 )]
position = Vector2( 440, 96 )

[node name="Point 2" parent="Enemy" index="4"]
position = Vector2( 160, 0 )

[connection signal="area_entered" from="Dice_Coliiders/Collider 1" to="." method="_on_Collider_1_area_entered"]
[connection signal="area_entered" from="Visuals/0/Spikes/Spike Area" to="." method="_on_Spike_Area_area_entered"]
[connection signal="area_entered" from="Health orbs/Health Orbs/Health Area" to="." method="_on_Health_Area_area_entered"]
[connection signal="area_entered" from="InstaKill" to="." method="_on_InstaKill_area_entered"]
[connection signal="area_entered" from="Enemy/Enemy Area" to="." method="_on_Enemy_Area_area_entered"]

[editable path="Visuals/0/Spikes"]
[editable path="Health orbs/Health Orbs"]
[editable path="InstaKill"]
[editable path="Enemy"]
